# rpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: CMakeLists.txt
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfirendservice.cc  calluserservice.cc
example/public/: friend.proto
include/: config.h  logger.h  noncopyable.h  rpcapplication.h  rpcchannel.h  rpccontroller.h  rpcprovider.h  safelockqueue.h  zookeeperutil.h
src/: logger.cc  rpcapplication.cc  rpcchannel.cc  rpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
test/: CMakeLists.txt  main.cc
